Fix: #114 overflow issue in data source listing

--- a/src/container/Home/style.scss
+++ b/src/container/Home/style.scss
@@ -156,7 +156,7 @@
     }
     .rightContainer {
         height: 84vh;
-        overflow: scroll;
+        overflow: auto;
         margin-top: 24px;
         padding-top: 0 !important;
     }
